--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@ body {
   padding: 20px;
   margin-top: 20px;
 }
+
+.card img{
+  max-width: 100%;
+  height: auto;
+}
 .Box{
   width: 100px;
   height: 100px;
