--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@ body {
   grid-template-columns: auto auto auto auto ; /*Make the grid smaller than the container*/
   gap: 10px;
   padding: 10px;
+  max-width: 100%;
+  height: auto;
 }
 
 .grid-container > div {
@@ -192,14 +194,12 @@ body {
           </div>
           </div>
  
-    <div class="row">
-        <div class="column">
+
             <div class="card">
                 <div class="box">
                     <img src="webbigpicture.jpg" alt="Image">
                 </div>
             </div>
-        </div>
 
         <div class="footer">
             <div class="grid-container">
