--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title> Gift plus Sun </title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name = "viewport" content = "width = device-width">
     <style>
 * {
   box-sizing: border-box;
@@ -85,7 +85,6 @@ body {
 @media screen and (max-width: 600px) {
   .column.side, .column.middle {
     width: 100%;
-    height: auto;
   }
 }
 
