--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@ body {
     </div>
 
           <!--start your form here-->
-          <div id ="MyDscroll" onload="openForm()">
+          <div id ="MyDscroll">
            <!-- <div class = "popup">       --> 
-            <form id ="signupbabe" method ="post" class="form-container">
+            <form id ="signupbabe" method ="get" class="form-container">
               <h1>SUBSCRIBE TO SUN & GIFT</h1>
               <label for="fname">Name:</label>
               <input type="text" id="fname" name="name" placeholder="Emily"><br>
@@ -188,13 +188,12 @@ body {
               <input type ="email" id="iemail" name="email" placeholder="jummy@gmail.com"> <br>
               <label for="mpassword">Password:</label>
               <input type="password" id="mpassword" name="password" placeholder="Emilyjut@2023"> <br>
-              <input type="SUBMIT" name=" SUBMIT">
+              <input type="submit" name=" submit">
 
 
             </form>
           </div>
-          </div>
- 
+ <h1 id ="formoutput"></h1>
 
             <div class="card">
                 <div class="box">
