--- a/index.html
+++ b/index.html
@@ -215,9 +215,22 @@
     <label for="mpassword">Password:</label>
     <input type="password" id="mpassword" name="password" placeholder="Emilyjut@2023"> <br>
     <input type="submit" name="SignUp" onclick="register()"> <br>
-    <p id ="iDO"> Already have an account? <a href="#" id = "ireally">Login</a></p>
+    <p id ="iDO"> Already have an account? <a href="#" id = "ireally" onclick = "myReplace2()">Login</a></p>
   </form>
 </div>
+
+<div id="Mylogin">
+  <!-- <div class="popup">       -->
+  <form id="loginbabe" method="get" class="form-container">
+    <h1>SUBSCRIBE TO SUN & GIFT</h1>
+    <label for="iemail">Email:</label>
+    <input type="text" id="iemail" name="email" placeholder="jummy@gmail.com"> <br>
+    <label for="mpassword">Password:</label>
+    <input type="password" id="mpassword" name="password" placeholder="Emilyjut@gmai.com"> <br>
+    <input type="submit" name="Login" onclick="login()"> <br>
+  </form>
+</div>
+
 
 <div class= "topnav2">
   <h1 id="formoutput"></h1>
