--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
   <form id="loginbabe" method="get" class="form-container">
     <h1>SUBSCRIBE TO SUN & GIFT</h1>
     <label for="iemail">Email:</label>
-    <input type="text" id="iemail" name="email" placeholder="jummy@gmail.com"> <br>
+    <input type="text" id="jemail" name="email" placeholder="jummy@gmail.com"> <br>
     <label for="mpassword">Password:</label>
-    <input type="password" id="mpassword" name="password" placeholder="Emilyjut@gmai.com"> <br>
+    <input type="password" id="kpassword" name="password" placeholder="Emilyjut@gmai.com"> <br>
     <input type="submit" name="Login" onclick="login()"> <br>
   </form>
 </div>
