--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 
 <head>
-  <title> Gift plus Sun </title>
+  <title> Gift & Sun </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width = device-width">
+
+  <!--ADD CSS FOR STYLING-->
   <style>
+
+/* CSS STYLE STARTS HERE*/
+
     * {
       box-sizing: border-box;
     }
@@ -195,11 +200,11 @@
   </div>
 
   <div class="topnav">
-      <a id="topoff1" href="#butt1" onclick="myReplace()">Recipies </a>
-      <a href="#butt2">Products</a>
+      <a id="topoff1" href="#butt1" onclick="myReplace()">Drinks </a>
+      <a href="https://ssun-studio.github.io/utensil.html">Products</a>
       <a href="#butt3">Gift & Sun</a>
-      <a href="#butt4">Food</a>
-      <a href="#butt5">Pastries</a>
+      <a href="https://ssun-studio.github.io/index.html">Food</a>
+      <a href="https://ssun-studio.github.io/pastry.html">Pastries</a>
   </div>
 
   <!--start your form here-->
@@ -207,7 +212,7 @@
 <div id="MyDscroll">
   <!-- <div class="popup">       -->
   <form id="signupbabe" method="get" class="form-container">
-    <h1>SUBSCRIBE TO SUN & GIFT</h1>
+    <h1>SUBSCRIBE TO GIFT & SUN</h1>
     <label for="fname">Name:</label>
     <input type="text" id="fname" name="name" placeholder="Emily"><br>
     <label for="iemail">Email:</label>
@@ -222,7 +227,7 @@
 <div id="Mylogin">
   <!-- <div class="popup">       -->
   <form id="loginbabe" method="get" class="form-container">
-    <h1>SUBSCRIBE TO SUN & GIFT</h1>
+    <h1>LOGIN TO GIFT & SUN</h1>
     <label for="iemail">Email:</label>
     <input type="text" id="jemail" name="email" placeholder="jummy@gmail.com"> <br>
     <label for="mpassword">Password:</label>
@@ -237,10 +242,7 @@
 </div>
 
   <div class="footer">
-      <a id="butt1" href="#Bro" onclick="redirectw3()">Recipie</a> 
-      <a id="butt2" href="#Food"> food </a>
-      <a id="butt3" href="#Bro">entree </a>
-      <a id="butt4" href="#Pastries"> pastries</a> <br>
+<br> <br>
   </div>
 
 
@@ -257,4 +259,3 @@
 </body>
 
 </html>
-
