--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   <div class="topnav">
       <a id="topoff1" href="#butt1" onclick="myReplace()">Drinks </a>
       <a href="https://ssun-studio.github.io/utensil.html">Products</a>
-      <a href="#butt3">Gift & Sun</a>
+      <a href="https://kelaaj.github.io/ProjectPCNwebsite/biography.html">Gift & Sun</a>
       <a href="https://ssun-studio.github.io/index.html">Food</a>
       <a href="https://ssun-studio.github.io/pastry.html">Pastries</a>
   </div>
